chore: modify meta settings

--- a/.frontmatter/templates/page.mdx
+++ b/.frontmatter/templates/page.mdx
@@ -1,9 +1,8 @@
 ---
-title: ''
-description: ''
-date: ''
+title: ""
+description: ""
+date: ""
 lastmod: '2022-02-26T02:18:51.771Z'
-author: ''
-image: ''
+image: ""
 ---
 
