--- a/.frontmatter/templates/post.mdx
+++ b/.frontmatter/templates/post.mdx
@@ -2,12 +2,11 @@
 title: ""
 slug: ""
 description: ""
-author: ""
 date: ""
 lastmod: 2022-03-02T16:42:12.225Z
 draft: true
 tags:
   - tag
 image: ""
-media: ""
+origin: ""
 ---
